--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
       <!-- Fonts -->
       <link rel="stylesheet" type="text/css" href="assets/fonts/line-icons.css">
+      <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
       <!-- Animate -->
       <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
       <!-- Owl carousel -->
