--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -15,6 +15,7 @@
       <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
       <!-- Fonts -->
       <link rel="stylesheet" type="text/css" href="assets/fonts/line-icons.css">
+      <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
       <!-- Animate -->
       <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
       <!-- Owl carousel -->
@@ -29,8 +30,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.40e937c714a3f002071a.css"></head>
+<link rel="stylesheet" href="styles.972acac1745b9bc55ca0.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.bf0159607dd64ad30f9a.js" type="module"></script><script src="runtime-es5.bf0159607dd64ad30f9a.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="main-es2015.67bbf889485923fc31c7.js" type="module"></script><script src="main-es5.67bbf889485923fc31c7.js" nomodule defer></script></body>
+<script src="runtime-es2015.bf0159607dd64ad30f9a.js" type="module"></script><script src="runtime-es5.bf0159607dd64ad30f9a.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="main-es2015.8bf864683305d4ed6bd6.js" type="module"></script><script src="main-es5.8bf864683305d4ed6bd6.js" nomodule defer></script></body>
 </html>
