--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,8 @@
       <link rel="stylesheet" href="assets/css/atlantis.css">
       <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
 
+      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6qdAwUtCqMCeX2ft3j5d7LCDdYw_tEb0"></script>
+
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
