--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,9 @@
       <!-- Responsive Style -->
       <link rel="stylesheet" href="assets/css/atlantis.css">
       <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
-
-      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6qdAwUtCqMCeX2ft3j5d7LCDdYw_tEb0"></script>
+<!-- AIzaSyBrxHuN03VweKU2lcV1ilwG1Ow42zg-5v0 -->
+<!-- AIzaSyC6qdAwUtCqMCeX2ft3j5d7LCDdYw_tEb0 -->
+      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrxHuN03VweKU2lcV1ilwG1Ow42zg-5v0"></script>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
