--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -25,8 +25,9 @@
       <!-- Responsive Style -->
       <link rel="stylesheet" href="assets/css/atlantis.css">
       <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
-
-      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6qdAwUtCqMCeX2ft3j5d7LCDdYw_tEb0"></script>
+<!-- AIzaSyBrxHuN03VweKU2lcV1ilwG1Ow42zg-5v0 -->
+<!-- AIzaSyC6qdAwUtCqMCeX2ft3j5d7LCDdYw_tEb0 -->
+      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrxHuN03VweKU2lcV1ilwG1Ow42zg-5v0"></script>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -34,5 +35,5 @@
 <link rel="stylesheet" href="styles.8f4b8de1510da2ac8c91.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.0be3ec8c6320534b3a17.js" type="module"></script><script src="runtime-es5.0be3ec8c6320534b3a17.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="main-es2015.64c8322fc3d43f50bc85.js" type="module"></script><script src="main-es5.64c8322fc3d43f50bc85.js" nomodule defer></script></body>
+<script src="runtime-es2015.0be3ec8c6320534b3a17.js" type="module"></script><script src="runtime-es5.0be3ec8c6320534b3a17.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="main-es2015.cf94e9177eb58898fc62.js" type="module"></script><script src="main-es5.cf94e9177eb58898fc62.js" nomodule defer></script></body>
 </html>
